--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -17,8 +17,9 @@ on:
         description: 'Run 3DS tests'
         required: true
         default: 'yes'
+
 jobs:
-  fxcg:
+  casio_fxcg:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -59,7 +60,7 @@ jobs:
           giteapc install Lephenixnoir/gint -y
       - name: Add fxsdk to PATH
         run: echo "~/.local/bin" >> $GITHUB_PATH
-      - run: make -j2 PLATFORM=simulator TARGET=fxcg
+      - run: make PLATFORM=simulator TARGET=fxcg
       - id: 'auth'
         if: ${{ github.event_name == 'push' && github.ref_name == 'upsilon-dev' && github.repository == 'UpsilonNumworks/Upsilon' }}
         uses: 'google-github-actions/auth@v0'
@@ -76,6 +77,7 @@ jobs:
         with:
           name: epsilon.g3a
           path: output/release/simulator/fxcg/epsilon.g3a
+
   nintendo_3ds:
     if: github.event.inputs.trigger3DS == 'yes' || github.event.inputs.trigger3DS == ''
     runs-on: ubuntu-latest
@@ -92,8 +94,8 @@ jobs:
       - run: rm makerom-v0.18.3-ubuntu_x86_64.zip
       - run: chmod +x ./makerom
       - run: echo "PATH=.:$PATH" >> $GITHUB_ENV
-      - run: make -j2 PLATFORM=simulator TARGET=3ds
-      - run: make -j2 PLATFORM=simulator TARGET=3ds epsilon.cia
+      - run: make PLATFORM=simulator TARGET=3ds
+      - run: make PLATFORM=simulator TARGET=3ds epsilon.cia
       - uses: actions/upload-artifact@master
         with:
           name: epsilon-3ds.3dsx
@@ -102,6 +104,7 @@ jobs:
         with:
           name: epsilon-3ds.cia
           path: output/release/simulator/3ds/epsilon.cia
+
   android:
     runs-on: ubuntu-latest
     steps:
@@ -110,7 +113,7 @@ jobs:
           submodules: 'recursive'
       - run: wget -nv https://dl.google.com/android/repository/android-ndk-r21e-linux-x86_64.zip
       - run: unzip -q android-ndk-r21e-linux-x86_64.zip
-      - run: make -j2 PLATFORM=simulator TARGET=android NDK_PATH=./android-ndk-r21e
+      - run: make PLATFORM=simulator TARGET=android NDK_PATH=./android-ndk-r21e
       - id: 'auth'
         if: ${{ github.event_name == 'push' && github.ref_name == 'upsilon-dev' && github.repository == 'UpsilonNumworks/Upsilon' }}
         uses: 'google-github-actions/auth@v0'
@@ -127,6 +130,7 @@ jobs:
         with:
           name: epsilon-android.apk
           path: output/release/simulator/android/epsilon.apk
+
   n0100:
     runs-on: ubuntu-latest
     steps:
@@ -136,31 +140,31 @@ jobs:
         with:
           submodules: 'recursive'
       - run: mkdir final-output
-      - run: make -j2 MODEL=n0100 EPSILON_I18N=en output/release/device/n0100/epsilon.onboarding.two_binaries
+      - run: make PLATFORM=device MODEL=n0100 EPSILON_I18N=en output/release/device/n0100/epsilon.onboarding.two_binaries
       - run: mv output/release/device/n0100/epsilon.onboarding.internal.bin final-output/epsilon.onboarding.internal.en.bin
       - run: rm output/release/device/n0100/apps/i18n.o output/release/device/n0100/apps/i18n.cpp
-      - run: make -j2 MODEL=n0100 EPSILON_I18N=fr output/release/device/n0100/epsilon.onboarding.two_binaries
+      - run: make PLATFORM=device MODEL=n0100 EPSILON_I18N=fr output/release/device/n0100/epsilon.onboarding.two_binaries
       - run: mv output/release/device/n0100/epsilon.onboarding.internal.bin final-output/epsilon.onboarding.internal.fr.bin
       - run: rm output/release/device/n0100/apps/i18n.o output/release/device/n0100/apps/i18n.cpp
-      - run: make -j2 MODEL=n0100 EPSILON_I18N=nl output/release/device/n0100/epsilon.onboarding.two_binaries
+      - run: make PLATFORM=device MODEL=n0100 EPSILON_I18N=nl output/release/device/n0100/epsilon.onboarding.two_binaries
       - run: mv output/release/device/n0100/epsilon.onboarding.internal.bin final-output/epsilon.onboarding.internal.nl.bin
       - run: rm output/release/device/n0100/apps/i18n.o output/release/device/n0100/apps/i18n.cpp
-      - run: make -j2 MODEL=n0100 EPSILON_I18N=pt output/release/device/n0100/epsilon.onboarding.two_binaries
+      - run: make PLATFORM=device MODEL=n0100 EPSILON_I18N=pt output/release/device/n0100/epsilon.onboarding.two_binaries
       - run: mv output/release/device/n0100/epsilon.onboarding.internal.bin final-output/epsilon.onboarding.internal.pt.bin
       - run: rm output/release/device/n0100/apps/i18n.o output/release/device/n0100/apps/i18n.cpp
-      - run: make -j2 MODEL=n0100 EPSILON_I18N=it output/release/device/n0100/epsilon.onboarding.two_binaries
+      - run: make PLATFORM=device MODEL=n0100 EPSILON_I18N=it output/release/device/n0100/epsilon.onboarding.two_binaries
       - run: mv output/release/device/n0100/epsilon.onboarding.internal.bin final-output/epsilon.onboarding.internal.it.bin
       - run: rm output/release/device/n0100/apps/i18n.o output/release/device/n0100/apps/i18n.cpp
-      - run: make -j2 MODEL=n0100 EPSILON_I18N=de output/release/device/n0100/epsilon.onboarding.two_binaries
+      - run: make PLATFORM=device MODEL=n0100 EPSILON_I18N=de output/release/device/n0100/epsilon.onboarding.two_binaries
       - run: mv output/release/device/n0100/epsilon.onboarding.internal.bin final-output/epsilon.onboarding.internal.de.bin
       - run: rm output/release/device/n0100/apps/i18n.o output/release/device/n0100/apps/i18n.cpp
-      - run: make -j2 MODEL=n0100 EPSILON_I18N=es output/release/device/n0100/epsilon.onboarding.two_binaries
+      - run: make PLATFORM=device MODEL=n0100 EPSILON_I18N=es output/release/device/n0100/epsilon.onboarding.two_binaries
       - run: mv output/release/device/n0100/epsilon.onboarding.internal.bin final-output/epsilon.onboarding.internal.es.bin
       - run: rm output/release/device/n0100/apps/i18n.o output/release/device/n0100/apps/i18n.cpp
-      - run: make -j2 MODEL=n0100 EPSILON_I18N=hu output/release/device/n0100/epsilon.onboarding.two_binaries
+      - run: make PLATFORM=device MODEL=n0100 EPSILON_I18N=hu output/release/device/n0100/epsilon.onboarding.two_binaries
       - run: mv output/release/device/n0100/epsilon.onboarding.internal.bin final-output/epsilon.onboarding.internal.hu.bin
       - run: rm output/release/device/n0100/apps/i18n.o output/release/device/n0100/apps/i18n.cpp
-      - run: make -j2 MODEL=n0100 output/release/device/n0100/flasher.light.bin
+      - run: make PLATFORM=device MODEL=n0100 output/release/device/n0100/flasher.light.bin
       - run: mv output/release/device/n0100/flasher.light.bin final-output/flasher.light.bin
       - run: find final-output/ -type f -exec bash -c "shasum -a 256 -b {} > {}.sha256" \;
       - run: tar cvfz binpack-n0100.tgz final-output/*
@@ -180,6 +184,7 @@ jobs:
         with:
           name: epsilon-binpack-n0100.tgz
           path: binpack-n0100.tgz
+
   n0110:
     runs-on: ubuntu-latest
     steps:
@@ -188,16 +193,16 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: 'recursive'
-      - run: make -j2 MODEL=n0110 epsilon.dfu
-      - run: make -j2 MODEL=n0110 epsilon.onboarding.dfu
-      - run: make -j2 MODEL=n0110 epsilon.onboarding.update.dfu
-      - run: make -j2 MODEL=n0110 epsilon.onboarding.beta.dfu
-      - run: make -j2 MODEL=n0110 flasher.light.dfu
-      - run: make -j2 MODEL=n0110 flasher.verbose.dfu
+      - run: make PLATFORM=device MODEL=n0110 epsilon.dfu
+      - run: make PLATFORM=device MODEL=n0110 epsilon.onboarding.dfu
+      - run: make PLATFORM=device MODEL=n0110 epsilon.onboarding.update.dfu
+      - run: make PLATFORM=device MODEL=n0110 epsilon.onboarding.beta.dfu
+      - run: make PLATFORM=device MODEL=n0110 flasher.light.dfu
+      - run: make PLATFORM=device MODEL=n0110 flasher.verbose.dfu
       # We  don't need bench as it is used only in factory
-      # - run: make -j2 bench.ram.dfu
-      # - run: make -j2 bench.flash.dfu
-      - run: make -j2 MODEL=n0110 binpack
+      # - run: make bench.ram.dfu
+      # - run: make bench.flash.dfu
+      - run: make PLATFORM=device MODEL=n0110 binpack
       - run: cp output/release/device/n0110/binpack-n0110-`git rev-parse HEAD | head -c 7`.tgz output/release/device/n0110/binpack-n0110.tgz
       - id: 'auth'
         if: ${{ github.event_name == 'push' && github.ref_name == 'upsilon-dev' && github.repository == 'UpsilonNumworks/Upsilon' }}
@@ -215,6 +220,7 @@ jobs:
         with:
           name: epsilon-binpack-n0110.tgz
           path: output/release/device/n0110/binpack-n0110.tgz
+
   bootloader:
     runs-on: ubuntu-latest
     steps:
@@ -223,15 +229,15 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: 'recursive'
-      - run: make -j2 MODEL=n0110 bootloader
-      - run: make -j2 epsilon.A.dfu epsilon.B.dfu
-      - run: make -j2 epsilon.onboarding.A.dfu
-      - run: make -j2 epsilon.onboarding.B.dfu
-      - run: make -j2 epsilon.onboarding.update.A.dfu
-      - run: make -j2 epsilon.onboarding.update.B.dfu
-      - run: make -j2 epsilon.onboarding.beta.A.dfu
-      - run: make -j2 epsilon.onboarding.beta.B.dfu
-      - run: make -j2 binpack
+      - run: make PLATFORM=device MODEL=n0110 bootloader
+      - run: make PLATFORM=device epsilon.A.dfu epsilon.B.dfu
+      - run: make PLATFORM=device epsilon.onboarding.A.dfu
+      - run: make PLATFORM=device epsilon.onboarding.B.dfu
+      - run: make PLATFORM=device epsilon.onboarding.update.A.dfu
+      - run: make PLATFORM=device epsilon.onboarding.update.B.dfu
+      - run: make PLATFORM=device epsilon.onboarding.beta.A.dfu
+      - run: make PLATFORM=device epsilon.onboarding.beta.B.dfu
+      - run: make PLATFORM=device binpack
       - run: cp output/release/device/bootloader/binpack-bootloader-`git rev-parse HEAD | head -c 7`.tgz output/release/device/bootloader/binpack-bootloader.tgz
       - run: cp output/release/device/n0110/bootloader.bin output/release/device/bootloader/binpack/
       - run: cp output/release/device/n0110/bootloader.bin output/release/device/bootloader/
@@ -253,6 +259,7 @@ jobs:
         with:
           name: epsilon-binpack-bootloader.tgz
           path: output/release/device/bootloader/binpack-bootloader.tgz
+
   windows:
     runs-on: windows-latest
     defaults:
@@ -264,8 +271,8 @@ jobs:
         with:
           submodules: 'recursive'
       - run: pacman -S --noconfirm mingw-w64-x86_64-gcc mingw-w64-x86_64-freetype mingw-w64-x86_64-pkg-config make mingw-w64-x86_64-python3 mingw-w64-x86_64-libjpeg-turbo mingw-w64-x86_64-libpng
-      - run: make -j2 PLATFORM=simulator
-      - run: make -j2 PLATFORM=simulator test.exe
+      - run: make PLATFORM=simulator TARGET=windows
+      - run: make PLATFORM=simulator TARGET=windows test.exe
       - run: cmd /c output\release\simulator\windows\test.exe --headless
       - id: 'auth'
         if: ${{ github.event_name == 'push' && github.ref_name == 'upsilon-dev' && github.repository == 'UpsilonNumworks/Upsilon' }}
@@ -283,6 +290,7 @@ jobs:
         with:
           name: epsilon-windows.exe
           path: output/release/simulator/windows/epsilon.exe
+
   web:
     runs-on: ubuntu-latest
     steps:
@@ -292,8 +300,8 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: 'recursive'
-      - run: make -j2 PLATFORM=simulator TARGET=web
-      - run: make -j2 PLATFORM=simulator TARGET=web test.js
+      - run: make PLATFORM=simulator TARGET=web
+      - run: make PLATFORM=simulator TARGET=web test.js
       - run: node output/release/simulator/web/test.js --headless
       - id: 'auth'
         if: ${{ github.event_name == 'push' && github.ref_name == 'upsilon-dev' && github.repository == 'UpsilonNumworks/Upsilon' }}
@@ -311,6 +319,7 @@ jobs:
         with:
           name: epsilon-web.zip
           path: output/release/simulator/web/epsilon.zip
+
   linux:
     runs-on: ubuntu-latest
     steps:
@@ -318,8 +327,8 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: 'recursive'
-      - run: make -j2 PLATFORM=simulator
-      - run: make -j2 PLATFORM=simulator test.bin
+      - run: make PLATFORM=simulator TARGET=linux
+      - run: make PLATFORM=simulator TARGET=linux test.bin
       - run: output/release/simulator/linux/test.bin --headless
       - id: 'auth'
         if: ${{ github.event_name == 'push' && github.ref_name == 'upsilon-dev' && github.repository == 'UpsilonNumworks/Upsilon' }}
@@ -337,6 +346,7 @@ jobs:
         with:
           name: epsilon-linux.bin
           path: output/release/simulator/linux/epsilon.bin
+
   macos:
     if: github.event.inputs.triggerMacos == 'yes' || github.event.inputs.triggerMacos == ''
     runs-on: macOS-latest
@@ -345,13 +355,14 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: 'recursive'
-      - run: make -j2 PLATFORM=simulator
-      - run: make -j2 PLATFORM=simulator ARCH=x86_64 test.bin
+      - run: make PLATFORM=simulator TARGET=macos
+      - run: make PLATFORM=simulator TARGET=macos ARCH=x86_64 test.bin
       - run: output/release/simulator/macos/x86_64/test.bin --headless
       - uses: actions/upload-artifact@master
         with:
           name: epsilon-macos.zip
           path: output/release/simulator/macos/epsilon.app
+
   ios:
     if: github.event.inputs.triggerIos == 'yes' || github.event.inputs.triggerIos == ''
     runs-on: macOS-latest
@@ -360,8 +371,8 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: 'recursive'
-      - run: make -j2 PLATFORM=simulator TARGET=ios EPSILON_TELEMETRY=0
-      - run: make -j2 PLATFORM=simulator TARGET=ios EPSILON_TELEMETRY=0 APPLE_PLATFORM=ios-simulator
+      - run: make PLATFORM=simulator TARGET=ios EPSILON_TELEMETRY=0
+      - run: make PLATFORM=simulator TARGET=ios EPSILON_TELEMETRY=0 APPLE_PLATFORM=ios-simulator
       - uses: actions/upload-artifact@master
         with:
           name: epsilon-ios.ipa
